# escora-ai

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  PDF_FINDINGS.md  README.md  fly.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: nightly-slow.yml  tests.yml
api/: config.py  deps.py  main.py  ratelimit.py
api/models/: db.py  schemas.py
api/routes/: admin.py  auth.py  design.py  drawing.py  inventory.py  jobs.py  projects.py
api/services/: email_service.py  inventory_service.py  job_service.py  methodology_view.py  pipeline_service.py  project_pipeline_service.py  project_service.py  project_store.py  rate_limit.py  revision_service.py  storage.py  usage_stats.py
catalog/: equipment.yaml  plywood.yaml  plywood_spans.yaml  telescopic_capacity.yaml  tower_capacity.yaml
data/: locadoras.example.json  locadoras.json
data/catalogs/: shoring_towers.json  telescopic_shores.json
data/inventory/: orguel_sjc.json  supplier_default.json
data/models/: equipment_clf.joblib  spacing_reg.joblib  support_type_clf.joblib  training_summary.json
data/test_files/: simple_slab.dxf  thick_slab.dxf  two_slabs.dxf
data/training/: sergio1_extracted.json
diagnostics/orguel_phase0/: summary.csv
diagnostics/orguel_phase0_live/: summary.csv
docs/: apresentacao-escora-ai.md  manual_normas_praticas_escoramento.md  next_improvements.md  production_upgrade_plan.md
docs/desenho_tecnico/: improvement_plan.md
docs/ops/: mac-mini-deploy.md
docs/pilots/: controlled-pilot.md
docs/research/: building_dxf_variants.md  cvs006_classification_gap.md  equipment_and_workflow.md  infra_dxf_analysis.md  lateral_shoring_research.md  nbr_desenho_tecnico.md  nbr_shoring_research.md  orguel_gold_standard.md  parser_improvements.md  ui_ux_benchmarks.md
docs/roadmap/: milestone_plan.md
docs/ux/: reescoramento_input_block.md
input/: CVS-COB-FOR-006-R00.DXF
output/: CVS-COB-bom-completo.csv  CVS-COB-bom.csv  CVS-COB-lajes-escoras.dxf  CVS-COB-resultado.dxf
scripts/: analyze_dxf_deep.py  analyze_orguel_rules.py  check_circulation.py  compare_rules.py  create_test_dxf.py  dxf_inspector.py  extract_alignment.py  gen_drawing_engine_doc.py  generate_output_dxf.py  generate_pitch.py  generate_presentation.py  orguel_blockdefs.py  orguel_blocktexts.py  orguel_cluster_stats.py  orguel_dims.py  orguel_dirnn.py  orguel_dxf_geometry.py  orguel_dxf_inventory.py  orguel_extract_all.py  orguel_grid_analysis.py  orguel_near_text.py  orguel_notas_raw.py  orguel_part2_battery.sh  orguel_spacing.py  orguel_spacing_texts.py  orguel_split_viga_laje.py  orguel_strips.py  orguel_torre_layers.py  orguel_vm_endgap.py  orguel_vmlines.py  orguel_window_alltext.py  provision_pilot_locadoras.py  render_layouts.py  render_repertoire.py  run_cvs_cob.py  strip_shoring.py  test_building_model.py  test_drawing_engine.py  test_sketch_batch.py  train_models.py  (+2 more)
scripts/diagnose/: run_all_calibration.py
scripts/ops/: backup_data.sh  com.escora.backup.plist  com.escora.engine.plist
src/: cli.py
src/auth/: branches.py  registry.py
src/drawing/: __init__.py  auto_dim.py  building_model.py  materials.py  nbr.py  paper_space.py  perspectives.py  primitives.py  sheet.py  sketch_reader.py  views.py  wall_resolver.py
src/engine/: accessories.py  beam_calculator.py  capitel_densification.py  foundation_calculator.py  grid_distributor.py  inventory.py  line_first_builder.py  load_calculator.py  masonry_calculator.py  nervura_detector.py  shaft_detector.py  shore_capacity.py  shore_reviewer.py  shore_selector.py  slab_builder.py  tower_selector.py  validator.py  vm50_bracing.py  vm_checks.py  vm_grid_builder.py
src/generator/: bom_generator.py  dxf_writer.py  masonry_bom_generator.py  report_generator.py
src/layout/: arch_styles.py  modular_grid.py  shape_grammar.py  solver.py  templates.py
src/ml/: feature_extractor.py  predictor.py  trainer.py
src/models/: calculation_models.py  confidence.py  masonry.py  methodology.py  pipeline_models.py  plywood.py  project.py  shore.py  slab.py
src/output/: arch_dxf_generator.py  csv_generator.py  dxf_generator.py  excel_generator.py  ifc_generator.py  masonry_pdf_generator.py  mermaid_generator.py  pdf_generator.py  project_assembler.py  report_data.py  structural_dxf_generator.py
src/parser/: construction_classifier.py  dwg_converter.py  dxf_reader.py  geometry_extractor.py  metadata_extractor.py  region_filter.py  scale_detector.py  segment_classifier.py  structural_system.py  text_classifier.py
src/pipeline/: learning_store.py  runner.py  stage_calculate.py  stage_classify.py  stage_learn.py  stage_metadata.py  stage_parse.py  stage_segment.py
src/rules/: __init__.py  project.py  schema.py
src/utils/: constants.py  labels.py  masonry_constants.py  units.py
tests/: test_audit_manual.py  test_e2e.py  test_engine.py  test_generator.py  test_parser.py
tests/api/: conftest.py  test_admin_onboarding.py  test_auth_tenant.py  test_generation_auth.py  test_inventory.py  test_jobs.py  test_operational_hygiene.py  test_password_reset.py  test_pilot_provisioning.py  test_pipeline_service.py  test_project_service.py  test_projects_security.py  test_quota_reescoramento.py  test_security_safety.py  test_security_sprint1.py  test_slab_rail_pillar_avoidance.py  test_status_detail_preview.py  test_usage_stats.py
web/: design.html  en.html  index.html  projetos.html
(+103 files in other folders)
