[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escora-ai"
version = "0.1.0"
description = "Cálculo e posicionamento automático de escoramentos para construção civil"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "ezdxf>=0.18",
    "numpy>=1.24",
    "shapely>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "reportlab>=4.0",
    "ifcopenshell>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
escora-ai = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Testes "slow" (regressao com DXFs reais grandes, ex: 104004 ~24 min)
# ficam fora da suite default; rodar explicitamente com: pytest -m slow
addopts = "-m 'not slow'"
# Backstop contra travas (ex.: region_filter em 104004): falha o teste apos
# 45 min em vez de segurar a suite. Folgado p/ o 104004 (~24 min); requer
# pytest-timeout (dev dep). Metodo 'thread' funciona com TestClient/pipelines.
timeout = 2700
timeout_method = "thread"
markers = [
    "slow: testes de regressao lentos com DXFs reais (rodar com -m slow)",
]

[tool.setuptools.packages.find]
include = ["src*"]
