[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escora-ai"
version = "0.1.0"
description = "Cálculo e posicionamento automático de escoramentos para construção civil"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "ezdxf>=0.18",
    "numpy>=1.24",
    "shapely>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "ifcopenshell>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
escora-ai = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Testes "slow" (regressao com DXFs reais grandes, ex: 104004 ~24 min)
# ficam fora da suite default; rodar explicitamente com: pytest -m slow
addopts = "-m 'not slow'"
# Backstop contra travas (ex.: region_filter em 104004): falha o teste apos
# 45 min em vez de segurar a suite. Folgado p/ o 104004 (~24 min); requer
# pytest-timeout (dev dep). Metodo 'thread' funciona com TestClient/pipelines.
timeout = 2700
timeout_method = "thread"
markers = [
    "slow: testes de regressao lentos com DXFs reais (rodar com -m slow)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Baseline mínimo (codebase nunca foi lintado): erros de sintaxe/import/
# nomes indefinidos + import hygiene. Expandir gradualmente (ratchet).
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E741",  # ambiguous variable name (l/I/O) — comum em geometria (l = length)
    "F841",  # unused variable — 28 casos legados (unpacking intencional); ratchet futuro
]

[tool.ruff.lint.per-file-ignores]
# __init__.py de verifiers importa módulos pelo efeito colateral (REGISTRY.register)
"src/rules/verifiers/__init__.py" = ["F401"]
# imports tardios deliberados (evitar circular / custo de import)
"api/routes/jobs.py" = ["E402"]
"src/engine/shore_reviewer.py" = ["E402"]

[tool.mypy]
# Escopo incremental: módulos já bem tipados. Expandir por diretório (ratchet).
# follow_imports=silent: só reporta erros nos arquivos do escopo, sem exigir
# que o resto do codebase (stage_calculate etc.) esteja limpo antes.
files = ["api", "src/rules", "src/utils", "src/auth"]
follow_imports = "silent"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = false

# Dívida tipada conhecida (27 erros em 2026-07) — ratchet: remover módulos
# desta lista conforme forem limpos; NÃO adicionar novos.
[[tool.mypy.overrides]]
module = [
    "api.models.db",
    "api.services.pipeline_service",
    "api.services.inventory_service",
    "api.routes.jobs",
    "api.routes.projects",
    "api.routes.drawing",
    "api.routes.design",
    "api.routes.auth",
    "api.routes.admin",
]
ignore_errors = true

[tool.setuptools.packages.find]
include = ["src*"]
